# booru_tag_mcp

./: .env  .gitignore  LICENSE  README.md  client.py  pyproject.toml
src/booru_tag_mcp/: get_tags.py  mcp_server.py
src/tag_mcp/: get_tags.py  mcp_server.py
src/tag_mcp/tags/: faces.txt
